--- a/paquescolar-web/src/main/webapp/resources/paradise-layout/css/layout-default.css
+++ b/paquescolar-web/src/main/webapp/resources/paradise-layout/css/layout-default.css
@@ -843,7 +843,7 @@ body {
     padding: 0;
     margin: 0;
     /*height: 100%;*/
-    background-color: #1a304b; }
+    background-color: #111c40; }
 
 .layout-wrapper .topbar {
     position: fixed;
