--- a/paquescolar-web/src/main/webapp/resources/template/topbar.xhtml
+++ b/paquescolar-web/src/main/webapp/resources/template/topbar.xhtml
@@ -9,7 +9,7 @@
     <div class="topbar">
         <div class="pageColumnLeft">
             <h:link styleClass="topbar-logo">
-                <p:graphicImage name="logo_mined_rpt.png" style="border: 0px;" library="images" />
+                <p:graphicImage name="escudo2.png" style="border: 0px;" library="images" />
             </h:link>
 
             <a href="#" id="menu-button">
@@ -18,8 +18,8 @@
         </div>
 
         <div class="pageColumnMid" style="text-align: left;">
-            <br/><p:outputLabel style="font-size: 20px; color: black;" value="Ministerio de Educación, Ciencia y Técnologia"/>
-            <br/><h:outputText style="font-size: 18px; color: black;" value="Sistema de Paquetes Escolares"/>
+            <br/><p:outputLabel style="font-size: 20px; color: black; font-family: 'Bembo Std';" value="Ministerio de Educación, Ciencia y Tecnología"/>
+            <br/><p:outputLabel style="font-size: 18px; color: black; font-family: 'Bembo Std';" value="Sistema de Paquetes Escolares"/>
         </div>
 
         <div id="user-display" style="padding-top: 1px; text-align: right;">
@@ -43,7 +43,7 @@
                 <tr>
                     <td>
                         <i class="fa fa-users" aria-hidden="true"></i>                        
-                        <p:outputLabel value="   #{menuController.usuario.idPersona.usuario} :: #{menuController.usuario.idTipoUsuario.descripcion}"/>
+                        <p:outputLabel value="   #{menuController.usuario.idPersona.usuario} :: #{menuController.usuario.idTipoUsuario.descripcion}" />
                     </td>
                 </tr>
             </table>
